2005-08-17  Dmitry Adamushko  <dmitry.adamushko@datacon.at>
	
	* nucleus/pipe.c: Various cleanups.

2005-08-16  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c: Rework and simplify timer locking code.

	* arch/generic/hal/generic.c: Group spinlock debugging features.

2005-08-15  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add ltt-enabled r12 patch.

2005-08-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/sem.c (sem_open, sem_close, sem_unlink): Add support
	for named semaphores.

2005-08-13  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/pod.h (xnsched_cpu): Provide an efficient UP
	implementation.

	* nucleus/pod.c (xnpod_schedule): Add diagnostic for missing
	rescheduling bit when in debug mode.

	* nucleus/shadow.c: Get rid of xnshadow_ticks2t[sv] and
	xnshadow_t[sv]2ticks which are no longer in use.

	* include/nucleus/pod.h (xnpod_ns2ticks, xnpod_ticks2ns): Avoid
	useless operations when system only supports aperiodic timer.

2005-08-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/generic/hal/generic.c (xnlock_read_proc): Add spinlock
	locking duration statistics.

2005-08-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm: Merge RTDM patch level #8.

	* include/nucleus/asm-uvm/system.h (main): Mlockall MCL_FUTURE too.

	* skins/posix/lib/thread.c (__pthread_trampoline): Switch to
	primary mode before entering the thread body.

	* skins/posix/syscall.c (__pthread_set_mode_np): Add primary mode
	switch through PTHREAD_PRIMARY.

	* skins/rtdm: Merge RTDM patch level #7.

	* nucleus/timer.c: Refactor using function tables for periodic and
	aperiodic modes. Aperiodic mode is now the built-in one, and
	periodic has become optional, which is more consistent wrt the hw
	situation.

2005-08-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c: Alloc hash-table from host memory and
	properly check for failure.

2005-08-08  Philippe Gerum  <rpm@xenomai.org>
